@@ -10,11 +10,11 @@ language
 definition
 	Entry[at0000] matches {	-- Encounter
 		content matches {
-			allow_archetype SECTION occurrences matches {0..1} matches {
+			allow_archetype SECTION [at0001] occurrences matches {0..1} matches {
 				include
-					domain_concept matches {/blood_pressure.v1/}
-					domain_concept matches {/blood_pressure.v2/}
+					domain_concept matches {/blood_pressure.v1/}					
 				exclude
+					domain_concept matches {/blood_pressure.v2/}
 				    domain_concept matches {/.*/}
 			}
 		}
@@ -30,6 +30,10 @@ ontology
 				["at0000"] = <
 					text = <"test composition">; 
 					description = <"test composition">
+				>
+				["at0001"] = <
+					text = <"slot">; 
+					description = <"slot">
 				>
 			>
 		>
