@@ -42,6 +42,9 @@ definition
                 	ELEMENT[at1010] matches {	-- duration interval
                 		value matches {|PT10M|}
                 	}
+                	-- ELEMENT[at1011] matches {	-- duration ISO8601 pattern
+                		-- value matches {PYMWDTHMS} is it valid?
+                	--}
                 	
                 	-- matches {PT30s, PT45s, PT1m0s, PT2m0s} -- Not currently in ADL syntax
                 	-- matches {|P1d +/PT4h|}
